# codex-python-fastapi

./: README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
app/: main.py
tests/: test_main.py
